# ChangeLog for x11-libs/libXi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXi/ChangeLog,v 1.93 2010/10/22 20:30:47 ssuominen Exp $

  22 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> libXi-1.3.1.ebuild:
  ppc64 stable wrt #331277

  22 Oct 2010; Brent Baude <ranger@gentoo.org> libXi-1.3.1.ebuild:
  stable ppc, bug 331277

  09 Oct 2010; Raúl Porcel <armin76@gentoo.org> libXi-1.3.1.ebuild:
  ia64/s390/sh/sparc stable wrt #331277

  03 Oct 2010; Tobias Klausmann <klausman@gentoo.org> libXi-1.3.1.ebuild:
  Stable on alpha, bug #331277

  25 Sep 2010; Markus Meier <maekke@gentoo.org> libXi-1.3.1.ebuild:
  x86 stable, bug #331277

  23 Sep 2010; Markus Meier <maekke@gentoo.org> libXi-1.3.1.ebuild:
  arm stable, bug #331277

  22 Sep 2010; Jeroen Roovers <jer@gentoo.org> libXi-1.3.1.ebuild:
  Stable for HPPA (bug #331277).

  22 Sep 2010; Markos Chandras <hwoarang@gentoo.org> libXi-1.3.1.ebuild:
  Stable on amd64 wrt bug #331277

  13 Aug 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  libXi-1.3.1.ebuild:
  Raise asciidoc dependency to 8.5.3, bug #331355

  03 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org> libXi-1.3.1.ebuild:
  Drop the stupid forceenable i put there during debug. Thx to lmi on
  #gentoo-desktop

*libXi-1.3.1 (03 Aug 2010)

  03 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org> -libXi-1.2.1.ebuild,
  +libXi-1.3.1.ebuild,
  +files/1.3.1-0001-Add-configure-switch-for-manpages-regenerating.patch:
  Version bump. Fix manpages regenerating. Patch reported upstream. Drop
  older.

  02 Aug 2010; Raúl Porcel <armin76@gentoo.org> libXi-1.3.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #308521

  31 May 2010; Guy Martin <gmsoft@gentoo.org> libXi-1.3.ebuild:
  hppa stable, #308521

  12 May 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking libXi-1.3 ppc64 stable for bug 308521

  18 Apr 2010; Markus Meier <maekke@gentoo.org> libXi-1.3.ebuild:
  arm stable, bug #308521
