@@ -1,5 +1,7 @@
 AUX 1.3.1-0001-Add-configure-switch-for-manpages-regenerating.patch 2370 RMD160 28723892b5d6f5b23ff2c0f418395e291338e0b5 SHA1 165fc656a87f5d9381482ad05a6addd9331e65b5 SHA256 0019af772621bb9b926317b1d24db70ebf80f3fae74674de0f3250e3e544155d
 DIST libXi-1.3.1.tar.bz2 359359 RMD160 3a80ba00bb68119d49517c8c1e8a844b905f587f SHA1 1a772a9c6e16c1bf26bb987d0be77a1f24f4ec91 SHA256 c38e88783f0f4dd2bd547f182060e83b5a963c973a6b0bb4e16be4c5e1776111
+DIST libXi-1.4.0.tar.bz2 413548 RMD160 c28abad177ef89efa111984643aa3f0a117b7c2c SHA1 cb84687d471ec88e5c2bcb36540ce5207cfc2c1e SHA256 42efe95a08c7bd28bc913bf8c34ed026abcc62504307626fc5150ca360b93283
 EBUILD libXi-1.3.1.ebuild 1065 RMD160 8bbcee5b7d70733e94f2877b3e99140367a397d2 SHA1 517c5a63800a3cec239173e6c70bf2419550928a SHA256 7e2c47fd4772bf574f5dc669ab1b1160775540e67f4fc1dac16e83099608448d
-MISC ChangeLog 11347 RMD160 4292c9c2822747183f0d12a15db85c9667367227 SHA1 bbfddc12ae32b9a815572c2e2eed213866d50964 SHA256 073af1596a71594b5d4737a4b79ccbafd62e04ef97845d69c0a9e6712b45a7ea
+EBUILD libXi-1.4.0.ebuild 1041 RMD160 022b4e1849e2aa9f9215f7969c2e0f0b6363538a SHA1 9704e470f8dcf70b5b07de3bd5983c5bbe0143f1 SHA256 a24ad5bfa3657254456644fd43f165ff98c4ee2b0af76acbd78dcb2d5312f281
+MISC ChangeLog 11467 RMD160 acae2c879e3811b1cb7728a9110edfcf1f2f90bf SHA1 60eece15994cbe3e0feec71a5b76b051f7819d71 SHA256 a94508c0b2815bfa88ccb8c06bc5e7389e92ec87b7b1dbc2e52f1bcacc7fd2c8
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
