@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libXi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXi/ChangeLog,v 1.93 2010/10/22 20:30:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXi/ChangeLog,v 1.94 2010/11/03 12:57:55 scarabeus Exp $
+
+*libXi-1.4.0 (03 Nov 2010)
+
+  03 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> +libXi-1.4.0.ebuild:
+  Version bump
 
   22 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> libXi-1.3.1.ebuild:
   ppc64 stable wrt #331277
